--- a/index.html
+++ b/index.html
@@ -4,71 +4,16 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="styles.css" />
-    <script src="script.js" defer></script>
+    <link rel="stylesheet" type="text/css" href="styles.css"/>
+    <script defer src="script.js" ></script>
     <title>Document</title>
 </head>
 <body>
-<header>
+<div class ="div1">
     <h1> Baby Yoda Goes to DisneyLand</h1>
     <img src="Untitled-design-27-800x400.jpg"> 
-</header>
-<div>
-    <p>What is the first ride Baby Yoda Wants to go on?</p>
-    <button id="button1" onclick="return yodaFeelings()">Tea Cups</button>
-    <button id="button2"> Space Mountain</button>
-    <img id="img1" class="img1" src="maxresdefault.jpg" >
-    <img id="img2" class="img2" src="images.jpg">
-</div>
-<div>
-    <p> Baby Yoda is Hungry?</p>
-    <button id="button3">Churro?</button>
-    <button id="button4">Mickey Mouse Beignets?</button>
-    <img id="img3" class="image3" src="download.jpg">
-    <img id="img4" class="image4" src="Baby-Yoda-Eating-Mickey-Beignet.webp">
-
+    <a href="pages/page1.html">next</a>
 </div>
 
-<div> 
-    <p> Baby Yoda Meets a Furry Friend? His happ level goes up</p>
-    <img src="Pulto.jpg">
-   
-</div>
-
-<div> 
-   Whats next in store for Baby Yoda? You choose:
-   <button id="button5">Baby Yoda Buys Pulto Food?</button>
-   <button id="button6"> They both meet Mickey Mouse?</button>
-   <img id="img5" class="image5" src="download.png">
-   <img id="img6" class="image6" src="Mickey mouse.jpg">
-</div>
-<div> 
-    <p>Baby Yoda wants to go to his homeland of Batuu</p>
-    <button id="button7">Rise of the resistance</button>
-    <img  id="img7" class="image7" src="baby-yoda-disneyland-cian.pepper-rise-of-the-resistance.webp"> 
-    <button id="button8">Millennium Falcon Ride</button>
-    <img id="img8" class="image8" src="Million Baby Yoda.jpg">
-
-</div>
-<div>
-    <p> Baby Yoda and Pulto have time for one more ride. You choose which ride:</p>
-    <button id="button9">Indiana Jones</button>
-    <button id="button10">Matterhorn Bobsleds</button>
-    <img id="img9" class="image9" src="Indiana Jones Ride.jpg">
-    <img id="img10" class="image10" src="Matterhorn.webp">
-</div>
-
-<div>
-    <p>Baby Yoda wants to get dinner with Pulto</p>
-    <button id="button11">Blue Bayo</button>
-    <button id="button12">The Golden Horseshoe</button>
-    <img id="img11" class="image11" src="blue Bayou.jpg">
-    <img id="img12" class="image12" src="Golden Shoe.jpg"> 
-</div>
-<div>
-    <p>Baby Yoda Had a great day. Does he want to go again?</p>
-    <img src="2022-dlr-disneyland-galaxys-edge-character-meet-and-greet-star-wars-mandalorian-baby-yoda-grogu-the-child-9.jpg">
-    <button>Rest</button>
-</div>
 </body>
 </html>
