--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
 <body>
 <div class ="div1">
     <h1> Baby Yoda Goes to DisneyLand</h1>
-    <img src="Untitled-design-27-800x400.jpg"> 
-    <a href="pages/page1.html">next</a>
+    <img src="de849639f01fd047096d348d749d0c34.gif">
+    <a id="mainUrl" href="pages/page1.html">next</a>
 </div>
 
 </body>
