--- a/pages/page2.html
+++ b/pages/page2.html
@@ -9,13 +9,17 @@
     <title>Document</title>
 </head>
 <body>
-    <div class="div2">
+    <div class="div">
         <p> Baby Yoda is Hungry?</p>
-        <button id="button1">Churro?</button>
+        <button id="button1" class="bttn1">Churro?</button>
         <button id="button2">Mickey Mouse Beignets?</button>
         <img id="img1" class="none" src="download.jpg">
         <img id="img2" class="none" src="Baby-Yoda-Eating-Mickey-Beignet.webp">
-        <a href="page3.html">Next</a>
+        <a href="page3.html">
+            <button class="disable" id="nextbtn">Next</button>
+           <!-- <button id="popupbttn" class="popupbttn1">Next</button>  -->
+        </a>
+        <p class="gone"></p>
     </div>
 
 </body>
