--- a/pages/page3.html
+++ b/pages/page3.html
@@ -12,7 +12,9 @@
 <div class="div"> 
         <p> Baby Yoda Meets a Furry Friend? His happ level goes up</p>
         <img src="Pulto.jpg">
-        <a href="page4.html">Click to see whats next</a>
+        <a href="page4.html">
+           <button>Click to see whats next</button> 
+        </a>
 </div>
 </body>
 </html>
