--- a/pages/page4.html
+++ b/pages/page4.html
@@ -11,11 +11,14 @@
 <body>
     <div class="div"> 
         Whats next in store for Baby Yoda? You choose:
-        <button id="button1">Baby Yoda Buys Pulto Food?</button>
-        <button id="button2"> They both meet Mickey Mouse?</button>
+        <button id="button1" class="nobttn">Baby Yoda Buys Pulto Food?</button>
+        <button id="button2" class="noBttn"> They both meet Mickey Mouse?</button>
         <img id="img1" class="none" src="download.png">
         <img id="img2" class="none" src="Mickey mouse.jpg">
-        <a href="page5.html">Whats next?</a>
+        <a href="page5.html">
+            <button class="disable" id="nextbtn">Next</button>
+        </a>
+        <p class="p2 disable" ></p>
      </div>
     
 </body>
