--- a/pages/page5.html
+++ b/pages/page5.html
@@ -16,8 +16,15 @@
         <button id="button2">Millennium Falcon Ride</button>
         <img id="img2" class="none" src="Million Baby Yoda.jpg">
     <!--put if statment in js for this-->
-        <a href="page6.html">What next?</a>
-        <a href="page7.html"> What next?</a>
+        <a href="page6.html">
+        <button class="disable" id="nextbtn">Next</button>
+        </a>
+        <p class="p2 disable" ></p>
+
+        <a href="page7.html"> 
+        <button class="disable" id="nextbtn2">Next2</button>
+    </a>
+    <p class="p2 disable" ></p>
     </div>
 
     
