--- a/pages/page6.html
+++ b/pages/page6.html
@@ -15,8 +15,12 @@
         <button id="button2">Matterhorn Bobsleds</button>
         <img id="img1" class="none" src="Indiana Jones Ride.jpg">
         <img id="img2" class="none" src="Matterhorn.webp">
-        <a href="page9.html">Next</a>
-    </div>
+        <p class ="gone2"></p>
+        <a href="page9.html">
+            <button class="disable" id="nextbtn">Next</button>
+        </a>
+        <p class="p2 disable" ></p>
+     </div>
     
 
 </body>
