--- a/pages/page7.html
+++ b/pages/page7.html
@@ -16,8 +16,11 @@
         <button id="button2">The Golden Horseshoe</button>
         <img id="img1" class="none" src="blue Bayou.jpg">
         <img id="img2" class="none" src="Golden Shoe.jpg">
-        <a href="page8.html">Nexts</a> 
-    </div>
+        <a href="page8.html">
+            <button class="disable" id="nextbtn">Next</button>
+        </a>
+        <p class="p2 disable" ></p>
+     </div>
 
     
 </body>
