--- a/pages/page9.html
+++ b/pages/page9.html
@@ -13,8 +13,10 @@
     <div class="div">
         <p>Baby Yoda Had a great day. Does he want to go again?</p>
         <img src="images baby yoda.jpg">
-        <button>Rest</button>
-        <a href="pages/index.html">Rest</a>
+        
+        <a href="index.html">
+            <button>Go to DisneyLand Again?</button>
+        </a>
     </div>
 
 
