--- a/pages/page1.html
+++ b/pages/page1.html
@@ -9,13 +9,16 @@
     <title>Document</title>
 </head>
 <body>
-<div class="div2">
+<div class="div">
     <p>What is the first ride Baby Yoda Wants to go on?</p>
-    <button id="button1">Tea Cups</button>
-    <button id="button2"> Space Mountain</button>
+    <button id="button1" class="noBttn">Tea Cups</button>
+    <button id="button2" class="noBttn"> Space Mountain</button>
     <img id="img1" class="none" src="maxresdefault.jpg" >
     <img id="img2" class="none" src="images.jpg">
-    <a href="page2.html">next</a>
+    <a href="page2.html" id="link" class="linkclass">
+        <button class="disable" id="nextbtn">Next</button>
+    </a>
+    <p class="p2 disable" ></p>
 </div>
 </body>
 </html>
