--- a/pages/page8.html
+++ b/pages/page8.html
@@ -16,10 +16,11 @@
         <button id="button2">Fireworks Show</button>
         <img id="img1" class="none" src="fireworks show.jpg">
         <img id="img2" class="none" src="Fanstasmic.jpg"> 
-        <a href="page9.html">Click</a>
-    </div>
-
-
+        <a href="page9.html">
+            <button class="disable" id="nextbtn">Next</button>
+        </a>
+        <p class="p2 disable" ></p>
+     </div>
 
 </body>
 </html>
