--- a/index.html
+++ b/index.html
@@ -9,10 +9,21 @@
     <title>Document</title>
 </head>
 <body>
-<div class ="div1">
-    <h1> Baby Yoda Goes to DisneyLand</h1>
-    <img src="de849639f01fd047096d348d749d0c34.gif">
-    <a id="mainUrl" href="pages/page1.html">next</a>
+<div class ="container">
+    
+        <div>
+            <h1> Baby Yoda Goes to DisneyLand</h1>
+        </div>
+       <div id="divimg">
+        <img src="de849639f01fd047096d348d749d0c34.gif">
+       </div>
+       <div id="divlink">
+             <a id="mainUrl" href="pages/page1.html">
+            <button>Click To Go To DisneyLand</button></a>
+       </div>
+   
+    </div>
+    
 </div>
 
 </body>
