--- a/pages/page3.html
+++ b/pages/page3.html
@@ -9,12 +9,18 @@
     <title>Document</title>
 </head>
 <body>
-<div class="div"> 
-        <p> Baby Yoda Meets a Furry Friend? His happ level goes up</p>
-        <img src="Pulto.jpg">
+<div class="container"> 
+    <div class="h1">
+        <h1>Baby Yoda Meets a Furry Friend? </h1>
+    </div>
+    <div id="divimg">
+        <img src="disney-pluto.gif">
+    </div>
+    <div id="divlink">
         <a href="page4.html">
-           <button>Click to see whats next</button> 
-        </a>
+            <button>Click to see whats next</button> 
+         </a>
+    </div>    
 </div>
 </body>
 </html>
