--- a/pages/page4.html
+++ b/pages/page4.html
@@ -9,16 +9,24 @@
     <title>Document</title>
 </head>
 <body>
-    <div class="div"> 
-        Whats next in store for Baby Yoda? You choose:
-        <button id="button1" class="nobttn">Baby Yoda Buys Pulto Food?</button>
-        <button id="button2" class="noBttn"> They both meet Mickey Mouse?</button>
-        <img id="img1" class="none" src="download.png">
-        <img id="img2" class="none" src="Mickey mouse.jpg">
-        <a href="page5.html">
-            <button class="disable" id="nextbtn">Next</button>
-        </a>
-        <p class="p2 disable" ></p>
+    <div class="container"> 
+        <div class="h1">
+            <h1>Whats next in store for Baby Yoda? You choose:</h1>
+        </div>
+        <div id="divbttn">
+            <button id="button1" class="nobttn">Baby Yoda Buys Pulto Food?</button>
+            <button id="button2" class="noBttn"> They both meet Mickey Mouse?</button>
+        </div>
+        <div id="divimg">
+            <img id="img1" class="none" src="PaDv.gif">
+            <img id="img2" class="none" src="Mickey mouse.jpg">
+        </div>
+        <div id="divlink">
+            <a href="page5.html">
+                <button class="disable" id="nextbtn">Next</button>
+            </a>
+            <p class="p2 disable" ></p>
+        </div>
      </div>
     
 </body>
