--- a/pages/page6.html
+++ b/pages/page6.html
@@ -9,17 +9,28 @@
     <title>Document</title>
 </head>
 <body>
-    <div class="div">
-        <p> Baby Yoda and Pulto have time for one more ride. You choose which ride:</p>
-        <button id="button1">Indiana Jones</button>
-        <button id="button2">Matterhorn Bobsleds</button>
-        <img id="img1" class="none" src="Indiana Jones Ride.jpg">
-        <img id="img2" class="none" src="Matterhorn.webp">
+    <div class="container">
+        <div class="h1">
+            <h1>Baby Yoda and Pulto have time for one more ride. You choose which ride: </h1>
+        </div>
+        <div id="divbttn">
+            <button id="button1">Indiana Jones</button>
+            <button id="button2">Matterhorn Bobsleds</button>
+
+        </div>
+        
+        <div id="divimg">
+            <img id="img1" class="none" src="Indiana Jones Ride.jpg">
+            <img id="img2" class="none" src="Matterhorn.webp">
+
+        </div>
+       <div id="link">
         <p class ="gone2"></p>
         <a href="page9.html">
             <button class="disable" id="nextbtn">Next</button>
         </a>
         <p class="p2 disable" ></p>
+        </div>
      </div>
     
 
