--- a/pages/page1.html
+++ b/pages/page1.html
@@ -9,16 +9,26 @@
     <title>Document</title>
 </head>
 <body>
-<div class="div">
-    <p>What is the first ride Baby Yoda Wants to go on?</p>
-    <button id="button1" class="noBttn">Tea Cups</button>
-    <button id="button2" class="noBttn"> Space Mountain</button>
-    <img id="img1" class="none" src="maxresdefault.jpg" >
-    <img id="img2" class="none" src="images.jpg">
-    <a href="page2.html" id="link" class="linkclass">
-        <button class="disable" id="nextbtn">Next</button>
-    </a>
-    <p class="p2 disable" ></p>
+<div class="container">
+    <div>
+        <h1>What is the first ride Baby Yoda wants to go on?</h1>
+    </div>
+    <!--<p>What is the first ride Baby Yoda Wants to go on?</p>-->
+    <div id="divbttn">
+        <button id="button1" class="noBttn">Tea Cups</button>
+        <button id="button2" class="noBttn"> Space Mountain</button>
+
+    </div>
+    <div id="divimg">
+        <img id="img1" class="none" src="maxresdefault.jpg" >
+        <img id="img2" class="none" src="images.jpg">
+    </div>
+    <div id="divlink">
+        <a href="page2.html" id="link" class="linkclass">
+            <button class="disable" id="nextbtn">Next</button>
+        </a>
+        <p class="p2 disable" ></p>
+    </div>  
 </div>
 </body>
 </html>
