--- a/pages/page2.html
+++ b/pages/page2.html
@@ -9,17 +9,27 @@
     <title>Document</title>
 </head>
 <body>
-    <div class="div">
-        <p> Baby Yoda is Hungry?</p>
+    <div class="container">
+    <div class="h1">
+        <h1>Baby Yoda is Hungry?</h1> 
+    </div>
+    <div id="divbttn">
         <button id="button1" class="bttn1">Churro?</button>
         <button id="button2">Mickey Mouse Beignets?</button>
+    </div>
+    <div id="divimg">
         <img id="img1" class="none" src="download.jpg">
         <img id="img2" class="none" src="Baby-Yoda-Eating-Mickey-Beignet.webp">
+    </div>
+    
+    <div id="divlink">
         <a href="page3.html">
             <button class="disable" id="nextbtn">Next</button>
            <!-- <button id="popupbttn" class="popupbttn1">Next</button>  -->
         </a>
-        <p class="gone"></p>
+        <p class="p2 disable"></p>
+    </div>
+       
     </div>
 
 </body>
