--- a/pages/page7.html
+++ b/pages/page7.html
@@ -10,16 +10,25 @@
 </head>
 <body>
 
-    <div class="div">
-        <p>Baby Yoda wants to get dinner with Pulto</p>
-        <button id="button1">Blue Bayo</button>
-        <button id="button2">The Golden Horseshoe</button>
-        <img id="img1" class="none" src="blue Bayou.jpg">
-        <img id="img2" class="none" src="Golden Shoe.jpg">
-        <a href="page8.html">
-            <button class="disable" id="nextbtn">Next</button>
-        </a>
-        <p class="p2 disable" ></p>
+    <div class="container">
+        <div class="h1">
+            <h1> Baby Yoda wants to get dinner with Pulto </h1>
+        </div>
+        
+        <div id="divbttn">
+            <button id="button1">Blue Bayo</button>
+            <button id="button2">The Golden Horseshoe</button>
+        </div>
+        <div id="divimg">
+            <img id="img1" class="none" src="blue Bayou.jpg">
+            <img id="img2" class="none" src="Golden Shoe.jpg">
+        </div>
+        <div id="divlink">
+            <a href="page8.html">
+                <button class="disable" id="nextbtn">Next</button>
+            </a>
+            <p class="p2 disable" ></p>
+        </div>
      </div>
 
     
