--- a/index.html
+++ b/index.html
@@ -12,14 +12,15 @@
 <div class ="container">
     
         <div>
-            <h1> Baby Yoda Goes to DisneyLand</h1>
+            <h1> Baby Yoda Goes to DisneyLand. Click to start the adventure.</h1>
         </div>
        <div id="divimg">
-        <img src="de849639f01fd047096d348d749d0c34.gif">
+        <img src="de849639f01fd047096d348d749d0c34.gif" class="imgofpulto">
        </div>
        <div id="divlink">
              <a id="mainUrl" href="pages/page1.html">
-            <button>Click To Go To DisneyLand</button></a>
+            <button>Click To Go To DisneyLand</button>
+        </a>
        </div>
    
     </div>
