--- a/pages/page1.html
+++ b/pages/page1.html
@@ -13,7 +13,7 @@
     <div>
         <h1>What is the first ride Baby Yoda wants to go on?</h1>
     </div>
-    <!--<p>What is the first ride Baby Yoda Wants to go on?</p>-->
+    
     <div id="divbttn">
         <button id="button1" class="noBttn">Tea Cups</button>
         <button id="button2" class="noBttn"> Space Mountain</button>
@@ -21,7 +21,7 @@
     </div>
     <div id="divimg">
         <img id="img1" class="none" src="maxresdefault.jpg" >
-        <img id="img2" class="none" src="images.jpg">
+        <img id="img2" class="none" src="space-mountain-loop.gif">
     </div>
     <div id="divlink">
         <a href="page2.html" id="link" class="linkclass">
