--- a/pages/page3.html
+++ b/pages/page3.html
@@ -14,7 +14,7 @@
         <h1>Baby Yoda Meets a Furry Friend? </h1>
     </div>
     <div id="divimg">
-        <img src="disney-pluto.gif">
+        <img src="disney-pluto.gif" class="imgofpulto">
     </div>
     <div id="divlink">
         <a href="page4.html">
