--- a/pages/page5.html
+++ b/pages/page5.html
@@ -19,8 +19,8 @@
        </div>
         
        <div id="divlink">
-        <img  id="img1" class="none" src="baby-yoda-disneyland-cian.pepper-rise-of-the-resistance.webp"> 
-        <img id="img2" class="none" src="Million Baby Yoda.jpg">
+        <img  id="img1" class="none" src="rotr nien nunb.gif"> 
+        <img id="img2" class="none" src="star-wars-hyperspeed.gif">
        </div>
     
        <div id="divlink">
