--- a/pages/page8.html
+++ b/pages/page8.html
@@ -20,8 +20,8 @@
         </div>
         
         <div id="divimg">
-            <img id="img1" class="none" src="fireworks show.jpg">
-            <img id="img2" class="none" src="Fanstasmic.jpg"> 
+            <img id="img1" class="none" src="PaltryDeficientBluebottlejellyfish-max-1mb.gif">
+            <img id="img2" class="none" src="disney-world-tinker-bell.gif"> 
 
         </div>
      <div id="divlink">
