--- a/pages/page9.html
+++ b/pages/page9.html
@@ -15,7 +15,7 @@
             <h1>Baby Yoda Had a great day. Does he want to go again?</h1>
         </div>
         <div>
-            <img src="images baby yoda.jpg">
+            <img src="images baby yoda.jpg" class="imgofpulto">
         </div>
        
         <div>
