--- a/pages/page4.html
+++ b/pages/page4.html
@@ -19,7 +19,7 @@
         </div>
         <div id="divimg">
             <img id="img1" class="none" src="PaDv.gif">
-            <img id="img2" class="none" src="Mickey mouse.jpg">
+            <img id="img2" class="none" src="Mickeymouse.gif">
         </div>
         <div id="divlink">
             <a href="page5.html">
